@@ -431,10 +431,15 @@ nk_window_is_hovered(struct nk_context *ctx)
 {
     NK_ASSERT(ctx);
     NK_ASSERT(ctx->current);
-    if (!ctx || !ctx->current) return 0;
-    if(ctx->current->flags & NK_WINDOW_HIDDEN)
+    if (!ctx || !ctx->current || (ctx->current->flags & NK_WINDOW_HIDDEN))
         return 0;
-    return nk_input_is_mouse_hovering_rect(&ctx->input, ctx->current->bounds);
+    else {
+        struct nk_rect actual_bounds = ctx->current->bounds;
+        if (ctx->begin->flags & NK_WINDOW_MINIMIZED) {
+            actual_bounds.h = ctx->current->layout->header_height;
+        }
+        return nk_input_is_mouse_hovering_rect(&ctx->input, actual_bounds);
+    }
 }
 NK_API nk_bool
 nk_window_is_any_hovered(struct nk_context *ctx)
